demo/k8s/nginx-ingress/gcp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gcp-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: ingress-nginx
          servicePort: 80
