demo/k8s/nginx-ingress/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"

    ## For debug: HTTP
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"

    ## Rate Limit
    # nginx.ingress.kubernetes.io/limit-rpm: "1"
    # nginx.ingress.kubernetes.io/limit-whitelist: "10.140.0.0/24,10.20.1.1/16"

    ## Resty WAF
    # nginx.ingress.kubernetes.io/lua-resty-waf-debug: "true"
    # nginx.ingress.kubernetes.io/lua-resty-waf: "simulate"
    # nginx.ingress.kubernetes.io/lua-resty-waf-allow-unknown-content-types: "true"

    nginx.ingress.kubernetes.io/configuration-snippet: |
      # more_set_headers "Debug-String: $allowed_country";
      # more_set_headers "Debug-String: $remote_addr";
      more_set_headers "Debug-By: Rammus";
      
spec:
  rules:
  - host: ddos.demo
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: echoserver
          servicePort: 80

  - host: grafana.staging
    http:
      paths:
      - path: /.*
        backend:
          serviceName: grafana
          servicePort: 3000
  - http:
      paths:
      - path: /.*
        backend:
          serviceName: echoserver
          servicePort: 80
